--- a/market_agents/research_agent_with_ui/chat-frontend/tsconfig.json
+++ b/market_agents/research_agent_with_ui/chat-frontend/tsconfig.json
@@ -6,6 +6,14 @@
       "dom.iterable",
       "esnext"
     ],
+    "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "esModuleInterop": true,
+    "isolatedModules": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
